--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
 portalTurnPlayer: false
 portalDistance: 3
+portalCooldown: 1000
 blockMessages: false
 lang:
   noPermission: You don't have permission to use Server Portals!
